--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -5,10 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant List</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  {{{body}}}
+  <header>
+    <div class="logo">
+      <a class="logo-link" href="/">
+        <i class="fa-solid fa-utensils"></i>
+      </a>
+    </div>
+  </header>
+  <main>
+    {{{body}}}
+  </main>
+  <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
