feat: add search funtion to listing

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <div class="search-bar">
   <form class="search-bar-form" action="/restaurants">
     <label for="search">Search</label>
-    <input type="text" id="search" value="" name="search">
+    <input type="text" id="search" value="{{keyword}}" name="search">
     <button type="submit">
       <i class="fa-solid fa-magnifying-glass"></i>
     </button>
