--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant List</title>
+  <title>Document</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -15,6 +15,11 @@
         <i class="fa-solid fa-utensils"></i>
       </a>
     </div>
+    {{#if create}}
+    <div class="create">
+      <a class="create-link" href="restaurant/create">新增</a>
+    </div>
+    {{/if}}
   </header>
   <main>
     {{{body}}}
