implement updating rest

--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -20,6 +20,14 @@
       <a class="create-link" href="restaurant/create">新增</a>
     </div>
     {{/if}}
+    {{#if editDelete}}
+    <div class="edit-delete">
+      <a class="edit-link" href="{{restaurant.id}}/edit">編輯</a>
+      <form class="delete-form" action="/restaurant/{{restaurant.id}}?_method=DELETE" method="POST">
+        <button class="delete-btn" type="submit">刪除</button>
+      </form>
+    </div>
+    {{/if}}
   </header>
   <main>
     {{{body}}}
